--- a/ansible-playbooks/prov_app_with_pm2_start..yml
+++ b/ansible-playbooks/prov_app_with_pm2_start..yml
@@ -1,14 +1,14 @@
-```yaml
-  GNU nano 6.2                                                                                                                                                                                                                                                                                                                                                                              prov_app_with_npm_start.yml
+```yaml                                                                                                                                                                                                                                                                                                                                                                            prov_app_with_npm_start.yml
 ---
 - name: prov_app_with_npm_start.yml
   hosts: web
-  gather_facts: yes
+  gather_facts: yes # aka sudo privileges 
   become: true
 
   vars:
     app_source_path: "/home/{{ ansible_user }}/app"
     app_dest_path: "/home/{{ ansible_user }}/app/app"
+    db_host_ip: "172.31.31.214"  # Define the IP address as a variable
 
   tasks:
 
@@ -33,9 +33,8 @@
     - name: Set DB_HOST environment variable
       ansible.builtin.lineinfile:
         path: /etc/environment
-        line: 'DB_HOST=mongodb://172.31.19.24:27017/posts'
+        line: 'DB_HOST=mongodb://{{ db_host_ip }}:27017/posts'
         state: present
-
 
     # Install pm2 globally
     - name: Install PM2 globally
@@ -72,7 +71,7 @@
       ansible.builtin.shell:
         cmd: pm2 stop all
         chdir: "{{ app_dest_path }}"
-      ignore_errors: yes
+      ignore_errors: yes    # can this be swapped with `pm2 stop all || true`: is this better practise?
       tags: pm2_stop
 
     # Start the node.js app with PM2
@@ -81,7 +80,7 @@
         cmd: pm2 start app.js --update-env
         chdir: "{{ app_dest_path }}"
       environment:
-        DB_HOST: "mongodb://172.31.19.24:27017/posts"
+        DB_HOST: "mongodb://{{ db_host_ip }}:27017/posts"
       tags: pm2_start
 
    # Seed the database
