--- a/ansible-playbooks/prov-app-all.yml
+++ b/ansible-playbooks/prov-app-all.yml
@@ -1,4 +1,9 @@
 ---
-- import_playbook: install_nginx.yaml
-- import_playbook: prov-db.yml
-- import_playbook: prov_app_with_npm_start.yml
+- name: install nginx
+  import_playbook: install_nginx.yaml
+
+- name: database playbook
+  import_playbook: prov-db.yml
+
+- name: app playbook
+  import_playbook: prov_app_with_npm_start.yml
